--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body {
   background-color: var(--color-background-900);
   padding: 2.4rem;
 }
+.box::-webkit-scrollbar,
+.list::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
 
 /* ******* */
 
